--- a/new_page/styles/Style.css
+++ b/new_page/styles/Style.css
@@ -65,6 +65,13 @@ p.lead {
     margin-top: 10px;
 }
 
+ol.lead {
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 24px;
+    margin-top: 10px;
+}
+
 #content {
     padding: 100px 0;
 }
@@ -73,6 +80,8 @@ p.lead {
     width: 700px;
     float: left;
 }
+
+
 
 /* **********************
     Sidebar
