--- a/new_page/styles/Style.css
+++ b/new_page/styles/Style.css
@@ -34,22 +34,22 @@ header {
     float: left;
 }
 
-.hero {
+.main-header {
     background: #2980b9;
     color: #000;
 }
 
-.hero-title {
+.main-title {
     width: 480px;
     padding: 60px 0;
     float: left;
 }
 
-.call-to-action {
+.do-i-qualify {
     margin: 30px 0;
 }
 
-.hero-image {
+.car-image {
     float: right;
     margin: 150px 0 -30px 0;
 }
@@ -111,7 +111,7 @@ aside .widget:nth-child(2) {
     margin-top: 40px;
 }
 
-aside .widget h4 {
+aside .widget h3 {
     font-weight: 200;
     font-size: 20px;
     margin: 0 0 10px;
@@ -127,21 +127,21 @@ aside .socials a:hover {
 }
 
 /* **********************
-    Secondary Call-to-Action
+    Email Header
     ********************* */
 
-.secondary-cta {
+.email-header {
     background: #eee;
     padding: 30px 0;
 }
 
-.secondary-cta h4 {
+.email-header h2 {
     font-weight: 200;
     font-size: 24px;
     float: left;
 }
 
-.secondary-cta form {
+.email-header form {
     margin: 0;
     float: right;
 }
